force-app/main/default/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>ASU Advisor Outreach</fullName>
        <description>for cases created in the Success Student Portal</description>
        <isActive>true</isActive>
        <values>
            <fullName>Busy Signal</fullName>
        </values>
        <values>
            <fullName>Closed%3A Administratively Resolved %28No Outreach%29</fullName>
        </values>
        <values>
            <fullName>Closed%3A Customer Self-Resolved</fullName>
        </values>
        <values>
            <fullName>Conferred with Student by Email</fullName>
        </values>
        <values>
            <fullName>Conferred with Student by Phone</fullName>
        </values>
        <values>
            <fullName>Email Sent</fullName>
        </values>
        <values>
            <fullName>In Person Meeting</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Left Message with Third Party</fullName>
        </values>
        <values>
            <fullName>Left voicemail</fullName>
        </values>
        <values>
            <fullName>Outreach Required</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Text message sent</fullName>
        </values>
        <values>
            <fullName>Unable to Leave Voicemail</fullName>
        </values>
        <values>
            <fullName>Wrong number</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>ASU Coach Outreach</fullName>
        <description>this is the process for the ASU Coach Outreach Case Record Type</description>
        <isActive>true</isActive>
        <values>
            <fullName>Busy Signal</fullName>
        </values>
        <values>
            <fullName>Closed%3A Customer Self-Resolved</fullName>
        </values>
        <values>
            <fullName>Closed%3A Customer Unresponsive</fullName>
        </values>
        <values>
            <fullName>Closed%3A Multiple Cases</fullName>
        </values>
        <values>
            <fullName>Closed%3A No Contact Necessary</fullName>
        </values>
        <values>
            <fullName>Closed%3A Resolved</fullName>
        </values>
        <values>
            <fullName>Email Sent</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Left voicemail</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Re-Opened</fullName>
        </values>
        <values>
            <fullName>Wrong number</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>ASU Retention Outreach</fullName>
        <description>Support process when Retention Outreach cases are imported.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed%3A Customer Self-Resolved</fullName>
        </values>
        <values>
            <fullName>Closed%3A Customer Unresponsive</fullName>
        </values>
        <values>
            <fullName>Closed%3A Forwarded</fullName>
        </values>
        <values>
            <fullName>Closed%3A Resolved</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting on Customer</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>ASU Service</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed%3A Cancellation</fullName>
        </values>
        <values>
            <fullName>Closed%3A Customer Self-Resolved</fullName>
        </values>
        <values>
            <fullName>Closed%3A Customer Unresponsive</fullName>
        </values>
        <values>
            <fullName>Closed%3A Duplicate</fullName>
        </values>
        <values>
            <fullName>Closed%3A Forwarded</fullName>
        </values>
        <values>
            <fullName>Closed%3A No Show</fullName>
        </values>
        <values>
            <fullName>Closed%3A Resolved</fullName>
        </values>
        <values>
            <fullName>Closed%3A SPAM</fullName>
        </values>
        <values>
            <fullName>Customer Actively Waiting</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting on Customer</fullName>
        </values>
        <values>
            <fullName>Waiting on Vendor</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>ASU Student Outreach</fullName>
        <description>Used for calling campaigns for student outreach</description>
        <isActive>true</isActive>
        <values>
            <fullName>1st Attempt</fullName>
        </values>
        <values>
            <fullName>2nd Attempt</fullName>
        </values>
        <values>
            <fullName>Closed%3A Contacted 1st Attempt</fullName>
        </values>
        <values>
            <fullName>Closed%3A Contacted 2nd Attempt</fullName>
        </values>
        <values>
            <fullName>Closed%3A Contacted 3rd Attempt</fullName>
        </values>
        <values>
            <fullName>Closed%3A No Contact Necessary</fullName>
        </values>
        <values>
            <fullName>Closed%3A No Contact on 3rd Attempt</fullName>
        </values>
        <values>
            <fullName>Outreach Required</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ADMIN_Case_Notes__c</fullName>
        <description>Private notes area for ADMIN cases received from Salesforce Support email.</description>
        <inlineHelpText>Private notes area for ADMIN cases received from Salesforce Support email.</inlineHelpText>
        <label>ADMIN Case Notes</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ASR_Actions__c</fullName>
        <description>imported with ASR flag</description>
        <label>ASR Actions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASR_Comments__c</fullName>
        <description>Comments Populated with ASR Indicator Import, visible  on the case created</description>
        <label>ASR Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASR_Date__c</fullName>
        <description>Populated with ASR indicator</description>
        <label>ASR Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASR_Reasons__c</fullName>
        <description>Populated by import with ASR Indicator</description>
        <label>ASR Reasons</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASU_Online_Student__c</fullName>
        <description>Populate field with contents of the Contact.ASU_Online_Student field</description>
        <formula>Contact.ASU_Online_Student__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ASU Online Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Assignment_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate whether or not the Territory Manager or Enrollment Coach assignment has been completed. Will be used in the case trigger to identify case records that have already gone through the TM assignment process so it doesn't happen again.</description>
        <inlineHelpText>If box is checked, then assignment has been completed.</inlineHelpText>
        <label>Additional Assignment Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affiliation__c</fullName>
        <description>[??] - Affiliation of contact for the new case.</description>
        <inlineHelpText>Affiliation of contact for the new case.</inlineHelpText>
        <label>Affiliation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General Inquiry</fullName>
                </value>
                <value>
                    <fullName>Other ASU</fullName>
                </value>
                <value>
                    <fullName>Outside source</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Third party sponsor</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age_Days_Excluding_Weekends__c</fullName>
        <description>[??]  - The number days (rounded up) a Case was Open or has been Open, excluding weekends.
Examples:
- Opened today and Still Open: 1 (assuming today is a weekday)
- Opened Friday and Closed the next Monday: 2
- Opened Tuesday and Closed the next Tuesday: 6

 Explanation of formula is below. 

&lt;-- Calculate the number of weeks that have passed, round down and multiply by 5 --&gt;
(FLOOR((DATEVALUE(ClosedDate)-DATEVALUE(CreatedDate))/7)*5)
+
&lt;-- Determine what day the Case was Created (0=Monday,1=Tuesday, etc)
CASE(MOD(DATEVALUE(CreatedDate)-DATE(1900,1,1),7),
&lt;-- Calculate the remainder when divided by 7. Depending on the day the Case was created, return additional days to make up for the time missing when only assuming 5 days per whole week above.  --&gt;
0,CASE(MOD(DATEVALUE(ClosedDate)-DATEVALUE(CreatedDate),7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1,CASE(MOD(DATEVALUE(ClosedDate)-DATEVALUE(CreatedDate),7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2,CASE(MOD(DATEV...</description>
        <formula>IF(IsClosed,
(FLOOR((DATEVALUE(ClosedDate)-DATEVALUE(CreatedDate))/7)*5)
+
CASE(MOD(DATEVALUE(CreatedDate)-DATE(1900,1,1),7),
0,CASE(MOD(DATEVALUE(ClosedDate)-DATEVALUE(CreatedDate),7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1,CASE(MOD(DATEVALUE(ClosedDate)-DATEVALUE(CreatedDate),7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2,CASE(MOD(DATEVALUE(ClosedDate)-DATEVALUE(CreatedDate),7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3,CASE(MOD(DATEVALUE(ClosedDate)-DATEVALUE(CreatedDate),7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4,CASE(MOD(DATEVALUE(ClosedDate)-DATEVALUE(CreatedDate),7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5,CASE(MOD(DATEVALUE(ClosedDate)-DATEVALUE(CreatedDate),7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6,CASE(MOD(DATEVALUE(ClosedDate)-DATEVALUE(CreatedDate),7),1,1,2,2,3,3,4,4,5,5,6,5,0),
Null)
,
(FLOOR((DATEVALUE(NOW())-DATEVALUE(CreatedDate))/7)*5)
+
CASE(MOD(DATEVALUE(CreatedDate)-DATE(1900,1,1),7),
0,CASE(MOD(TODAY()-DATEVALUE(CreatedDate),7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1,CASE(MOD(TODAY()-DATEVALUE(CreatedDate),7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2,CASE(MOD(TODAY()-DATEVALUE(CreatedDate),7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3,CASE(MOD(TODAY()-DATEVALUE(CreatedDate),7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4,CASE(MOD(TODAY()-DATEVALUE(CreatedDate),7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5,CASE(MOD(TODAY()-DATEVALUE(CreatedDate),7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6,CASE(MOD(TODAY()-DATEVALUE(CreatedDate),7),1,1,2,2,3,3,4,4,5,5,6,5,0),
Null)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number days (rounded up) a Case was Open or has been Open, excluding weekends.
Examples:
- Opened today and Still Open: 1 (assuming today is a weekday)
- Opened Friday and Closed the next Monday: 2
- Opened Tuesday and Closed the next Tuesday: 6</inlineHelpText>
        <label>Age in Days Excluding Weekends</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assign_Case_to_Opp_Owner__c</fullName>
        <formula>IF(ISBLANK(Opportunity__c),"No associated Opportunity",
IF(OwnerId = Opportunity__r.OwnerId,"Owners already match",
IF(NOT(Opportunity__r.Owner.IsActive),"Opportunity Owner is Inactive",
HYPERLINK("/"&amp;Id&amp;"/a?newOwn_lkid=&amp;"&amp;Opportunity__r.OwnerId&amp;"&amp;newOwn="&amp;Opportunity__r.Owner.FirstName&amp;"%20"&amp;Opportunity__r.Owner.LastName&amp;"&amp;retURL=%2F"&amp;Id
,
"Change Owner to "&amp;Opportunity__r.Owner.FirstName&amp;" "&amp;Opportunity__r.Owner.LastName))))</formula>
        <inlineHelpText>Please note that a Change Owner dialog will appear in a new tab. You must click Save, and then close the tab.</inlineHelpText>
        <label>Assign Case to Opp Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associate_Case_to_Active_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate if the case should be associated with an open, active opportunity.  Used in case trigger.</description>
        <inlineHelpText>If checked, the case should be associated with an open, active opportunity.</inlineHelpText>
        <label>Associate Case to Active Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attachments__c</fullName>
        <description>Counts the number of files attached to the case; either, directly or attached to related emails. Will update if an attachment is added or removed from the case. Will be functional upon any cases created on or after when this field is added to PROD. Will update older cases if attachments are added.</description>
        <label>Number of Attachments</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAP__c</fullName>
        <description>[??] - Displays a green icon for a College Achievement Plan participant. Automatically set when the Contact has one or more Student Group records where Status is True and PeopleSoft Code is CP00, CP01, or CP02.</description>
        <formula>Contact.CAP__c</formula>
        <inlineHelpText>Displays a green icon for a College Achievement Plan participant (yellow for possible). Automatically set when the Contact has one or more Student Group records where Status is True and PeopleSoft Code is CP00, CP01, or CP02. (or if possible is checked)</inlineHelpText>
        <label>CAP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field looks up to the Case Classification object where record type = Category.</description>
        <label>Case Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case_Classification__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Category</value>
            </filterItems>
            <filterItems>
                <field>Case_Classification__c.Parent__c</field>
                <operation>equals</operation>
                <valueField>$Source.CC_Functional_Group__c</valueField>
            </filterItems>
            <filterItems>
                <field>Case_Classification__c.Visible__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Case_Classification__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case_Classification__c</referenceTo>
        <relationshipLabel>Cases (Category)</relationshipLabel>
        <relationshipName>Cases_Category</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Functional_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field looks up to the Case Classification object where record type = Functional Group.</description>
        <label>Case Functional Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case_Classification__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Functional Group</value>
            </filterItems>
            <filterItems>
                <field>Case_Classification__c.Visible__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Case_Classification__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case_Classification__c</referenceTo>
        <relationshipLabel>Cases (Functional Group)</relationshipLabel>
        <relationshipName>Cases_Functional_Group</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Most_Recent_Functional_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field looks up to the Case Classification object where record type = Functional Group.</description>
        <label>Most Recent Functional Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case_Classification__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Functional Group</value>
            </filterItems>
            <filterItems>
                <field>Case_Classification__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case_Classification__c</referenceTo>
        <relationshipLabel>Cases (Most Recent Functional Group)</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Sub_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field looks up to the Case Classification object where record type = Sub Category.</description>
        <label>Case Sub-Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case_Classification__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Sub Category</value>
            </filterItems>
            <filterItems>
                <field>Case_Classification__c.Parent__c</field>
                <operation>equals</operation>
                <valueField>$Source.CC_Category__c</valueField>
            </filterItems>
            <filterItems>
                <field>Case_Classification__c.Visible__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Case_Classification__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case_Classification__c</referenceTo>
        <relationshipLabel>Cases (Sub Category)</relationshipLabel>
        <relationshipName>Cases_Sub_Category</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Back_Completed__c</fullName>
        <description>Custom date field that allows users to select the date they called the student back for follow-up.</description>
        <inlineHelpText>Please select the date you called the student back if they requested a call back.</inlineHelpText>
        <label>Call Back Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_Back_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows users to select whether or not the Case contact has requested to be called back after resolution.</description>
        <inlineHelpText>Should be checked when the Case contact has requested to be called back after resolution.</inlineHelpText>
        <label>Call Back Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Result__c</fullName>
        <description>Used for calling campaigns. It is the result of the call attempt. The picklist value is dependent on the Status.</description>
        <label>Call Result</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Left Voicemail</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Number disconnected</fullName>
                </value>
                <value>
                    <fullName>Spoke with 3rd Party</fullName>
                </value>
                <value>
                    <fullName>Spoke with Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <description>The ASU campus where service is provided.</description>
        <inlineHelpText>The ASU campus where service is provided.</inlineHelpText>
        <label>Service Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Downtown</fullName>
                </value>
                <value>
                    <fullName>Havasu</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Polytechnic</fullName>
                </value>
                <value>
                    <fullName>Tempe</fullName>
                </value>
                <value>
                    <fullName>Thunderbird</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>Yuma</fullName>
                </value>
                <value>
                    <fullName>Gila Valley</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Complexity_Indicator__c</fullName>
        <description>For Salesforce Support use to indicate complexity of support case for case tracking metrics.</description>
        <inlineHelpText>For Salesforce Support use to indicate complexity of support case for case tracking metrics.</inlineHelpText>
        <label>Case Complexity Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Feed_Email_Template_Id__c</fullName>
        <label>Case Feed Email Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Feed_Email__c</fullName>
        <description>Referenced in Apex code to display the default email address of the User's department. Uses CAR for the default email address. -- In Development --</description>
        <label>Case Feed Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Link__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( '/services', $Api.Partner_Server_URL_260)) + '/' + Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <formula>IF(NOT(ISBLANK(Owner:User.FirstName)), 
HYPERLINK(Owner:User.Id,Owner:User.FirstName + " " + Owner:User.LastName),
IF(NOT(ISBLANK(Owner:Queue.Name)),
HYPERLINK(Owner:Queue.Id,Owner:Queue.Name),
""))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Record Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Recruitment_Status__c</fullName>
        <inlineHelpText>See SFE-1412
Used to identify Cases that the user has inferred need to be associated with a recruiting effort.</inlineHelpText>
        <label>Case Recruitment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Associated to Opportunity</fullName>
                </value>
                <value>
                    <fullName>Not Recruitment Related</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A direct connection to the Source of this Case. This is most commonly a RFI form.</inlineHelpText>
        <label>Case Source</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Survey_Received_Date__c</fullName>
        <description>The date and time a survey was submitted by the Contact listed on this Case.</description>
        <inlineHelpText>The date and time a survey was submitted by the Contact listed on this Case.</inlineHelpText>
        <label>Case Survey Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Survey_Sent_Date__c</fullName>
        <description>The date and time a survey was sent to the Contact listed on this Case.</description>
        <inlineHelpText>The date and time a survey was sent to the Contact listed on this Case.</inlineHelpText>
        <label>Case Survey Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Survey_Status__c</fullName>
        <description>Calculated based on the Date fields below:
If Case Survey Sent Date is empty = “Survey Not Sent” 
If Case Survey Sent Dates not empty AND Case Survey Received Date is empty = “Survey Sent” 
If Case Survey Received Date is not empty = “Survey Response Received”</description>
        <formula>IF(ISNULL(Case_Survey_Sent_Date__c),'Survey Not Sent',
IF(ISNULL(Case_Survey_Received_Date__c),'Survey Sent' 
,'Survey Response Received'))</formula>
        <inlineHelpText>If Case Survey Sent Date is empty = “Survey Not Sent” 
If Case Survey Sent Dates not empty AND Case Survey Received Date is empty = “Survey Sent” 
If Case Survey Received Date is not empty = “Survey Response Received”</inlineHelpText>
        <label>Case Survey Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Display__c</fullName>
        <description>[??] - Formula field used to indicate if a category isn't selected in a report.</description>
        <formula>IF(isPickVal( Category__c,"" ),"(not indicated)",text( Category__c ))</formula>
        <inlineHelpText>Formula field used to indicate if a category isn't selected in a report.</inlineHelpText>
        <label>Category Display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>[Manual or Automated] - Examples include: 098-T, Collections, Counselor, Customer Services, Document Processing, Graduate Applicant Services, Graduation, International, Late Fee Appeals, Loan Research, Non-Degree, Office Specialist, Online Student, Other</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Functional_Group__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1098-T</fullName>
                </value>
                <value>
                    <fullName>3D Print</fullName>
                    <label>LS 3D Print</label>
                </value>
                <value>
                    <fullName>Academic Inquiries</fullName>
                </value>
                <value>
                    <fullName>Academic Records</fullName>
                </value>
                <value>
                    <fullName>Academic Services</fullName>
                </value>
                <value>
                    <fullName>Academic Services - Training</fullName>
                </value>
                <value>
                    <fullName>Academic Status Reports</fullName>
                </value>
                <value>
                    <fullName>Academic Success Operations</fullName>
                </value>
                <value>
                    <fullName>Academic Support</fullName>
                </value>
                <value>
                    <fullName>Access</fullName>
                </value>
                <value>
                    <fullName>Accountancy</fullName>
                </value>
                <value>
                    <fullName>Ad Hoc</fullName>
                </value>
                <value>
                    <fullName>Admissions</fullName>
                </value>
                <value>
                    <fullName>Admissions (Help Desk)</fullName>
                </value>
                <value>
                    <fullName>Admission Services Business Intelligence</fullName>
                </value>
                <value>
                    <fullName>Admission Services - General</fullName>
                </value>
                <value>
                    <fullName>Admissions Inquiries</fullName>
                </value>
                <value>
                    <fullName>Advising</fullName>
                </value>
                <value>
                    <fullName>Advising (Help Desk)</fullName>
                </value>
                <value>
                    <fullName>Advising - GOEE</fullName>
                </value>
                <value>
                    <fullName>Agreements and Contracts</fullName>
                </value>
                <value>
                    <fullName>Agribusiness</fullName>
                </value>
                <value>
                    <fullName>Airport Arrivals</fullName>
                </value>
                <value>
                    <fullName>AISSS Appointments</fullName>
                </value>
                <value>
                    <fullName>Alternate Modes</fullName>
                </value>
                <value>
                    <fullName>Alumni</fullName>
                </value>
                <value>
                    <fullName>Ambassador Team</fullName>
                </value>
                <value>
                    <fullName>Applicant Services - Graduate</fullName>
                </value>
                <value>
                    <fullName>Applicant Services - Undergraduate</fullName>
                </value>
                <value>
                    <fullName>Appointments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Date__c</fullName>
        <formula>Contact.Change_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Most Recent Outlook Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Class_Nbr__c</fullName>
        <description>for storing the class number associated with the Case Creation Indicator Flag</description>
        <label>Class Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Close_Method__c</fullName>
        <description>Main method that was used to communicate with the student and to close this case and entered by Success Coach.</description>
        <inlineHelpText>Main method that was used to communicate with the student and to close this case.</inlineHelpText>
        <label>Communication Close Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Text (SMS)</fullName>
                </value>
                <value>
                    <fullName>Pitch</fullName>
                </value>
                <value>
                    <fullName>Third Attempt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <description>for tracking the Course associated with the Case Creation Indicator Flag</description>
        <label>Course Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Name__c</fullName>
        <description>[??] - Displays the First and Last Name of the individual who Created this Case. Used for Templates and Visualforce pages.</description>
        <formula>CreatedBy.FirstName &amp; " " &amp; CreatedBy.LastName</formula>
        <inlineHelpText>Displays the First and Last Name of the individual who Created this Case. Used for Templates and Visualforce pages.</inlineHelpText>
        <label>Created By Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Role__c</fullName>
        <description>[??] - Role of user that created the case</description>
        <formula>CreatedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Role</label>
        <type>Text</type>
    </fields>
</CustomObject>